--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -26,11 +26,11 @@ jobs:
       #     cd git/jenkins-gem5-prod/
 
       # need to add compiler checks and gem5 art
-      - name: presubmit stage2
-        run: |
-          # PRE_COMMIT_HOME=/tmp/pre-commit-cache pre-commit run --from-ref HEAD~ --to-ref HEAD
-          cd tests
-          ./main.py run -j4 -t4 gem5 -vv && scons -C .. --no-compress-debug --ignore-style build/ARM/unittests.opt
+      # - name: presubmit stage2
+      #   run: |
+      #     # PRE_COMMIT_HOME=/tmp/pre-commit-cache pre-commit run --from-ref HEAD~ --to-ref HEAD
+      #     cd tests
+      #     ./main.py run -j4 -t4 gem5 -vv && scons -C .. --no-compress-debug --ignore-style build/ARM/unittests.opt
 
       - name: Testing
         run: |
