--- a/.github/workflows/artifact-testing.yaml
+++ b/.github/workflows/artifact-testing.yaml
@@ -7,28 +7,28 @@ run-name: Testing artifact usage
 #     - cron:  '0 * * 1 *' # this only runs once a year, for files that aren't being testde
 on: [push]
 jobs:
-  # Test-Upload:
-  #   runs-on: [self-hosted, linux, x64]
-  #   # running container with only a single arguement passes the image being used
-  #   container: gcr.io/gem5-test/ubuntu-22.04_all-dependencies:latest
+  Test-Upload:
+    runs-on: [self-hosted, linux, x64]
+    # running container with only a single arguement passes the image being used
+    container: gcr.io/gem5-test/ubuntu-22.04_all-dependencies:latest
 
-  #   steps:
-  #   # checks out repository, should be more useful when
-  #   # running checks on changed files
-  #     - uses: actions/checkout@v3
-  #       with:
-  #         fetch-depth: 0
+    steps:
+    # checks out repository, should be more useful when
+    # running checks on changed files
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
-  #     - name: Build and run gem5
-  #       run: |
-  #         scons build/X86/gem5.fast -j $(nproc)
+      - name: Build and run gem5
+        run: |
+          scons build/X86/gem5.fast -j $(nproc)
 
-  #     - uses: actions/upload-artifact@v3
-  #       with:
-  #         name: gem5-artifact
-  #         path: build/X86
+      - uses: actions/upload-artifact@v3
+        with:
+          name: gem5-artifact
+          path: build/X86
 
-  #     - run: echo "🍏 This job's status is ${{ job.status }}."
+      - run: echo "🍏 This job's status is ${{ job.status }}."
 
   Test-Download:
     runs-on: [self-hosted, linux, x64]
