--- a/runnerdeployment.yaml
+++ b/runnerdeployment.yaml
@@ -1,12 +1,23 @@
 apiVersion: actions.summerwind.dev/v1alpha1
 kind: RunnerDeployment
 metadata:
-  name: example-runnerdeploy2
+  name: gem5-runners
 spec:
-  replicas: 4
+  replicas: 6
   template:
     spec:
       repository: mkjost0/gem5-actions
+      # we can use the label below in order to assign specific runners
+      # to specific tasks when we want to start differentiating between
+      # build jobs and test jobs
+      # https://github.com/actions/actions-runner-controller/blob/master/docs/using-arc-runners-in-a-workflow.md
+      # labels:
+      #   - build-runner
+
+
+
+
+
       # containers:
       # - name: runner
       #   env: []
