--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -1,9 +1,9 @@
 name: GitHub Actions gem5 Test Run
 run-name: Testing PreCommit tests
-# on: [push]
-on:
-  schedule:
-    - cron:  '0 * * 1 *' # this only runs once a year, for files that aren't being testde
+on: [push]
+# on:
+#   schedule:
+#     - cron:  '0 * * 1 *' # this only runs once a year, for files that aren't being tested
 jobs:
   Test-PreCommit:
     runs-on: [self-hosted, linux, x64]
@@ -27,12 +27,16 @@ jobs:
       #     # Move the CWD to the gem5 checkout.
       #     cd git/jenkins-gem5-prod/
 
-      # need to add compiler checks and gem5 art
       # - name: presubmit stage2
       #   run: |
-      #     # PRE_COMMIT_HOME=/tmp/pre-commit-cache pre-commit run --from-ref HEAD~ --to-ref HEAD
+            # PRE_COMMIT_HOME=/tmp/pre-commit-cache pre-commit run --from-ref HEAD~ --to-ref HEAD
       #     cd tests
       #     ./main.py run -j4 -t4 gem5 -vv && scons -C .. --no-compress-debug --ignore-style build/ARM/unittests.opt
+      - name: try compiler tests
+        run: |
+          cd tests
+          chmod u+x compiler-tests.sh
+          ./compiler-tests.sh
 
       - name: Testing
         run: |
