--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -8,7 +8,7 @@ jobs:
   Test-PreCommit:
     runs-on: [self-hosted, linux, x64]
     # running container with only a single arguement passes the image being used
-    container: gcr.io/gem5-test/ubuntu-22.04_all-dependencies:latest
+    container: gcr.io/gem5-test/clang-version-14:v22-1
 
     steps:
     # checks out repository, should be more useful when
