--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -17,7 +17,6 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: docker-practice/actions-setup-docker@master
 
       # - name: gem5 art
       #   run: |
@@ -36,6 +35,7 @@ jobs:
       #     ./main.py run -j4 -t4 gem5 -vv && scons -C .. --no-compress-debug --ignore-style build/ARM/unittests.opt
       - name: try compiler tests
         run: |
+          docker --version
           cd tests
           chmod u+x compiler-tests.sh
           ./compiler-tests.sh
