--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -1,9 +1,9 @@
 name: GitHub Actions gem5 Test Run
 run-name: Testing PreCommit tests
-on: [push]
-# on:
-#   schedule:
-#     - cron:  '0 * * 1 *' # this only runs once a year, for files that aren't being tested
+# on: [push]
+on:
+  schedule:
+    - cron:  '0 * * 1 *' # this only runs once a year, for files that aren't being tested
 jobs:
   Test-PreCommit:
     runs-on: [self-hosted, linux, x64]
