--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -1,15 +1,15 @@
 name: GitHub Actions gem5 Test Run
 run-name: Testing PreCommit tests
-on: [push]
-# on:
-#   schedule:
-#     - cron:  '0 * * 1 *' # this only runs once a year, for files that aren't being tested
+# on: [push]
+on:
+  schedule:
+    - cron:  '0 * * 1 *' # this only runs once a year, for files that aren't being tested
 jobs:
   Test-PreCommit:
     runs-on: [self-hosted, linux, x64]
     # running container with only a single arguement passes the image being used
     # container: gcr.io/gem5-test/clang-version-14:v22-1
-    
+    # *********** why do we use a docker image here. it works fine w/o one i think ****************************
 
     steps:
     # checks out repository, should be more useful when
