--- a/.github/workflows/nightlies.yaml
+++ b/.github/workflows/nightlies.yaml
@@ -1,16 +1,17 @@
 name: GitHub Actions gem5 Test Run
 run-name: Testing nightlies
-# on: [push]
+on: [push]
 #  allows us to repeat this daily at 2am
 #  https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#schedule
-on:
-  schedule:
-    - cron:  '0 2 * * *'
+# on:
+#   schedule:
+#     - cron:  '0 2 * * *'
 jobs:
   Test-Nightly-Long:
     runs-on: [self-hosted, linux, x64]
     # running container with only a single arguement passes the image being used
     container: gcr.io/gem5-test/ubuntu-22.04_all-dependencies:latest
+    timeout-minutes: 1440 # 24 hours
 
     steps:
     # checks out repository, should be more useful when
@@ -39,10 +40,10 @@ jobs:
       #         --exclude-tags aarch64
       #     # cd "${gem5_root}"
 
-      # - name: nightlies long tests
-      #   run: |
-      #     cd tests
-      #     ./main.py run --length long -j $(nproc) -t8 -vv
+      - name: nightlies long tests
+        run: |
+          cd tests
+          ./main.py run --length long -j $(nproc) -t8 -vv
 
       - run: echo "🍏 This job's status is ${{ job.status }}."
 
@@ -91,23 +92,23 @@ jobs:
   #         sst --add-lib-path=./ sst/example.py
   #         cd -
 
-  SystemC-Job:
-    runs-on: [self-hosted, linux, x64]
-    container: gcr.io/gem5-test/systemc-env:latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
+  # SystemC-Job:
+  #   runs-on: [self-hosted, linux, x64]
+  #   container: gcr.io/gem5-test/systemc-env:latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #       with:
+  #         fetch-depth: 0
 
-      - name: systemc tests
-        run: |
-          scons -j$(nproc) --ignore-style build/ARM/gem5.opt
-          scons --with-cxx-config --without-python --without-tcmalloc USE_SYSTEMC=0 -j$(nproc) build/ARM/libgem5_opt.so
+  #     - name: systemc tests
+  #       run: |
+  #         scons -j$(nproc) --ignore-style build/ARM/gem5.opt
+  #         scons --with-cxx-config --without-python --without-tcmalloc USE_SYSTEMC=0 -j$(nproc) build/ARM/libgem5_opt.so
 
-      - name: systemc tests
-        run: |
-          cd util/systemc/gem5_within_systemc
-          make -j$(nproc)
-          ../../../build/ARM/gem5.opt ../../../configs/example/se.py -c ../../../tests/test-progs/hello/bin/arm/linux/hello
-          LD_LIBRARY_PATH=../../../build/ARM/:/opt/systemc/lib-linux64/ ./gem5.opt.sc m5out/config.ini
-          cd -
+  #     - name: systemc tests
+  #       run: |
+  #         cd util/systemc/gem5_within_systemc
+  #         make -j$(nproc)
+  #         ../../../build/ARM/gem5.opt ../../../configs/example/se.py -c ../../../tests/test-progs/hello/bin/arm/linux/hello
+  #         LD_LIBRARY_PATH=../../../build/ARM/:/opt/systemc/lib-linux64/ ./gem5.opt.sc m5out/config.ini
+  #         cd -
