--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -1,9 +1,9 @@
 name: GitHub Actions gem5 Test Run
 run-name: Testing PreCommit tests
-# on: [push]
-on:
-  schedule:
-    - cron:  '0 * * 1 *' # this only runs once a year, for files that aren't being tested
+on: [push]
+# on:
+#   schedule:
+#     - cron:  '0 * * 1 *' # this only runs once a year, for files that aren't being tested
 jobs:
   Test-PreCommit:
     runs-on: [self-hosted, linux, x64]
@@ -35,21 +35,18 @@ jobs:
             # PRE_COMMIT_HOME=/tmp/pre-commit-cache pre-commit run --from-ref HEAD~ --to-ref HEAD
       #     cd tests
       #     ./main.py run -j4 -t4 gem5 -vv && scons -C .. --no-compress-debug --ignore-style build/ARM/unittests.opt
-      - name: try compiler tests
-        run: |
-          docker --version
-          cd tests
-          chmod u+x compiler-tests.sh
-          ./compiler-tests.sh -j $(nproc)
+      # - name: try compiler tests
+      #   run: |
+      #     docker --version
+      #     cd tests
+      #     chmod u+x compiler-tests.sh
+      #     ./compiler-tests.sh -j $(nproc)
 
       - name: Testing
         run: |
           set -e
           # Creating a virtual environment allows us to cleanly install the packages
           # within a Docker container.
-          mkdir -p .pyenv
-          python3 -m venv .pyenv
-          source .pyenv/bin/activate
           cd git/jenkins-gem5-prod/
           # Install the packages
           pip install -e util/gem5art/artifact
