--- a/.github/workflows/nightlies.yaml
+++ b/.github/workflows/nightlies.yaml
@@ -1,13 +1,13 @@
-name: GitHub Actions gem5 Test Run
-run-name: Testing GPU, SST, KVM, and SystemC
-on: [push]
+name: Nightly Tests
+run-name: Automated - Running Nightly Tests
 #  allows us to repeat this daily at 2am
 #  https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#schedule
-# on:
-#   schedule:
-#     - cron:  '0 2 * * *'
+on:
+  schedule:
+    - cron:  '0 2 * * *'
+
 jobs:
-  Test-Precommit:
+  Unit-Tests:
     runs-on: [self-hosted, linux, x64]
     # running container with only a single arguement passes the image being used
     container: gcr.io/gem5-test/ubuntu-22.04_all-dependencies:latest
@@ -20,101 +20,101 @@ jobs:
         with:
           fetch-depth: 0
 
-      # - name: Build and run gem5
-      #   run: |
-      #     scons build/X86/gem5.fast -j $(nproc)
+      - name: test nightly unit test opt
+        run: |
+          scons build/ALL/unittests.opt -j $(nproc) --ignore-style
 
-      # - name: test nightly unit test opt
-      #   run: |
-      #     scons build/ALL/unittests.opt -j $(nproc) --ignore-style
+      - name: nightly unit test debug
+        run: scons build/ALL/unittests.opt -j $(nproc) --ignore-style
 
-      # - name: nightly unit test debug
-      #   run: scons build/ALL/unittests.opt -j $(nproc) --ignore-style
+  Long-Tests:
+    runs-on: [self-hosted, linux, x64]
+    container: gcr.io/gem5-test/ubuntu-22.04_all-dependencies:latest
+    timeout-minutes: 1440 # 24 hours
 
-      # - name: Get changed files
-      #   id: changed-files
-      #   uses: tj-actions/changed-files@v19
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
-      # - name: Install black and reorder-python-imports
-      #   run: pip install black reorder-python-imports
+      - name: nightlies long tests
+        run: |
+          cd tests
+          ./main.py run --length long -j $(nproc) -t8 -vv
 
-      # - name: Black and Sort changed files
-      #   run: |
-      #     for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
-      #       echo $file
-      #       if [[ $file == *.py ]]; then
-      #         black $file --check
-      #         reorder-python-imports $file
-      #       fi
-      #     done
+  KVM-Tests:
+    runs-on: [self-hosted, linux, x64]
+    container: gcr.io/gem5-test/ubuntu-22.04_all-dependencies:latest
+    timeout-minutes: 1440 # 24 hours
 
-      # - name: kvm tests
-      #   run: |
-      #     cd tests
-      #     ./main.py run -j $(nproc) -vv \
-      #         --exclude-tags ".*" --include-tags kvm --exclude-tags very\-long \
-      #         --exclude-tags debug --exclude-tags fast --exclude-tags ARM \
-      #         --exclude-tags aarch64
-      #     # cd "${gem5_root}"
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
-      # - name: nightlies long tests
-      #   run: |
-      #     cd tests
-      #     ./main.py run --length long -j $(nproc) -t8 -vv
+      - name: kvm tests
+        run: |
+          cd tests
+          ./main.py run -j $(nproc) -vv \
+              --exclude-tags ".*" --include-tags kvm --exclude-tags very\-long \
+              --exclude-tags debug --exclude-tags fast --exclude-tags ARM \
+              --exclude-tags aarch64
+          # cd "${gem5_root}"
 
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+  GPU-Tests:
+    runs-on: [self-hosted, linux, x64]
+    container: gcr.io/gem5-test/gcn-gpu:latest
+    timeout-minutes: 1440 # 24 hours
 
-  # GPU-Job:
-  #   runs-on: [self-hosted, linux, x64]
-  #   container: gcr.io/gem5-test/gcn-gpu:latest
-  #   timeout-minutes: 1440 # 24 hours
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #       with:
-  #         fetch-depth: 0
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
-  #     - name: start gpu tests
-  #       run: |
-  #         scons build/GCN3_X86/gem5.opt -j$(nproc) --ignore-style \
-  #         || (rm -rf build && scons build/GCN3_X86/gem5.opt \
-  #         -j$(nproc) --ignore-style)
+      - name: start gpu tests
+        run: |
+          scons build/GCN3_X86/gem5.opt -j$(nproc) --ignore-style \
+          || (rm -rf build && scons build/GCN3_X86/gem5.opt \
+          -j$(nproc) --ignore-style)
 
-  #     - name: square spu tests
-  #       run: |
-  #         wget -qN http://dist.gem5.org/dist/develop/test-progs/square/square
-  #         mkdir -p tests/testing-results
-  #         build/GCN3_X86/gem5.opt configs/example/apu_se.py --reg-alloc-policy=dynamic -n3 -c square
+      - name: square spu tests
+        run: |
+          wget -qN http://dist.gem5.org/dist/develop/test-progs/square/square
+          mkdir -p tests/testing-results
+          build/GCN3_X86/gem5.opt configs/example/apu_se.py --reg-alloc-policy=dynamic -n3 -c square
 
-  #     - name: HeteroSync sleepMutex
-  #       run: |
-  #         wget -qN http://dist.gem5.org/dist/develop/test-progs/heterosync/gcn3/allSyncPrims-1kernel
-  #         build/GCN3_X86/gem5.opt configs/example/apu_se.py --reg-alloc-policy=dynamic -n3 -c allSyncPrims-1kernel --options="sleepMutex 10 16 4"
+      - name: HeteroSync sleepMutex
+        run: |
+          wget -qN http://dist.gem5.org/dist/develop/test-progs/heterosync/gcn3/allSyncPrims-1kernel
+          build/GCN3_X86/gem5.opt configs/example/apu_se.py --reg-alloc-policy=dynamic -n3 -c allSyncPrims-1kernel --options="sleepMutex 10 16 4"
 
-  #     - name: HeteroSync LFBarr
-  #       run: |
-  #         build/GCN3_X86/gem5.opt configs/example/apu_se.py --reg-alloc-policy=dynamic -n3 -c allSyncPrims-1kernel --options="lfTreeBarrUniq 10 16 4"
+      - name: HeteroSync LFBarr
+        run: |
+          build/GCN3_X86/gem5.opt configs/example/apu_se.py --reg-alloc-policy=dynamic -n3 -c allSyncPrims-1kernel --options="lfTreeBarrUniq 10 16 4"
 
-  # SST-Job:
-  #   runs-on: [self-hosted, linux, x64]
-  #   container: gcr.io/gem5-test/sst-env:latest
-  #   timeout-minutes: 1440 # 24 hours
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #       with:
-  #         fetch-depth: 0
-  #     - name: Run SST tests
-  #       run: |
-  #         scons build/RISCV/libgem5_opt.so -j$(nproc) --without-tcmalloc --ignore-style;
-  #         cd ext/sst
-  #         make clean
-  #         make -j $(nproc)
-  #         sst --add-lib-path=./ sst/example.py
-  #         cd -
+  SST-Tests:
+    runs-on: [self-hosted, linux, x64]
+    container: gcr.io/gem5-test/sst-env:latest
+    timeout-minutes: 1440 # 24 hours
 
-  SystemC-Job:
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Run SST tests
+        run: |
+          scons build/RISCV/libgem5_opt.so -j$(nproc) --without-tcmalloc --ignore-style;
+          cd ext/sst
+          make clean
+          make -j $(nproc)
+          sst --add-lib-path=./ sst/example.py
+          cd -
+
+  SystemC-Tests:
     runs-on: [self-hosted, linux, x64]
     container: gcr.io/gem5-test/systemc-env:latest
     timeout-minutes: 1440 # 24 hours
+
     steps:
       - uses: actions/checkout@v3
         with:
